--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1>Elizabeth Smith</h1>
 <h2>I love tacos, seriously</h2>
 
-<p>Content inside a template tag is hidden from the client.</p>
+<p>Seriously, tacos are the best</p>
 
 <img src="http://img.playbuzz.com/image/upload/f_auto,fl_lossy,q_auto/cdn/824078c6-acfa-4483-8b2d-9d5d16563116/8ed774b5-fd27-4478-9f0d-1eaecb9c31a3.jpg" width="214" height="204">
 
