Change page content

--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
   <script>console.log("Hello")</script>
   <style>
     body {
-      background-color: #5c1c67;
+      background-color: #71719c;
+
+    }
+    h1 {
+      text-align: center;
     }
   </style>
 </head>
 <body>
 
 <h1>Elizabeth Smith</h1>
+<a href="tel:775-636-1727">775-636-1727</a>
+<br>
+<a href="mailto:lsmith5215@gmail.com">lsmith5215@gmail.com</a>
 <h2>I love tacos, seriously</h2>
 
 <p>Seriously, tacos are the best</p>
 
 <img src="http://img.playbuzz.com/image/upload/f_auto,fl_lossy,q_auto/cdn/824078c6-acfa-4483-8b2d-9d5d16563116/8ed774b5-fd27-4478-9f0d-1eaecb9c31a3.jpg" width="214" height="204">
 
-<p>A later example will show you how to use JavaScript to display the template content.</p>
+<p>Green tacos and Ham, Sam I am</p>
 
 </body>
 </html>
