Change page content

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
 <p>Seriously, tacos are the best</p>
 
+<p>Trash pandas like tacos</p>
+
 <img src="http://img.playbuzz.com/image/upload/f_auto,fl_lossy,q_auto/cdn/824078c6-acfa-4483-8b2d-9d5d16563116/8ed774b5-fd27-4478-9f0d-1eaecb9c31a3.jpg" width="214" height="204">
 
 <p>Green tacos and Ham, Sam I am</p>
